// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pages > dashboard > should render correctly when there are both live and upcoming disruptions 1`] = `
[
  <div
    className="app-phase-banner__wrapper"
  >
    <div
      className="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        className="govuk-phase-banner__content"
      >
        <strong
          className="govuk-tag govuk-phase-banner__content__tag"
        >
          alpha
        </strong>
        <span
          className="govuk-phase-banner__text"
        >
          This is a new service – your
           
          <a
            className="govuk-link"
            href="/feedback"
            id="feedback-link"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            feedback
          </a>
           
          will help us to improve it.
        </span>
      </p>
    </div>
  </div>,
  <div
    className="govuk-width-container"
  >
    <main
      className="govuk-main-wrapper"
    >
      <h1
        className="govuk-heading-xl"
      >
        Dashboard
      </h1>
      <a
        className="govuk-button govuk-button--start"
        data-module="govuk-button"
        draggable="false"
        href="/create-disruption"
        id="create-new-button"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
        role="button"
      >
        Create new disruption
        <svg
          className="govuk-button__start-icon"
          focusable="false"
          height="19"
          role="presentation"
          viewBox="0 0 33 40"
          width="17.5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h13l20 20-20 20H0l20-20z"
            fill="currentColor"
          />
        </svg>
      </a>
      <div
        className="govuk-tabs"
        data-module="govuk-tabs"
      >
        <h2
          className="govuk-tabs__title"
        >
          Disruptions
        </h2>
        <ul
          className="govuk-tabs__list"
        >
          <li
            className="govuk-tabs__list-item govuk-tabs__list-item--selected"
          >
            <a
              className="govuk-tabs__tab"
              href="#live"
            >
              Live
            </a>
          </li>
          <li
            className="govuk-tabs__list-item"
          >
            <a
              className="govuk-tabs__tab"
              href="#upcoming"
            >
              Upcoming
            </a>
          </li>
        </ul>
        <div
          className="govuk-tabs__panel"
          id="live"
        >
          <table
            className="govuk-table"
          >
            <caption
              className="govuk-table__caption govuk-table__caption--l"
            >
              Live disruptions
            </caption>
            <thead
              className="govuk-table__head"
            >
              <tr
                className="govuk-table__row"
              >
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  ID
                </th>
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  Summary
                </th>
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  Affected dates
                </th>
              </tr>
            </thead>
            <tbody
              className="govuk-table__body"
            >
              <tr
                className="govuk-table__row"
              >
                <th
                  className="govuk-table__header align-middle"
                  scope="row"
                >
                  <a
                    className="govuk-link"
                    href="/dashboard"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onTouchStart={[Function]}
                  >
                    12
                  </a>
                </th>
                <td
                  className="govuk-table__cell align-middle"
                >
                  A bad disruption
                </td>
                <td
                  className="govuk-table__cell align-middle"
                >
                  <div
                    className="pb-2 last:pb-0"
                  >
                    21/03/2023
                     
                     onwards
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          className="govuk-tabs__panel govuk-tabs__panel--hidden"
          id="upcoming"
        >
          <table
            className="govuk-table"
          >
            <caption
              className="govuk-table__caption govuk-table__caption--l"
            >
              Upcoming disruptions
            </caption>
            <thead
              className="govuk-table__head"
            >
              <tr
                className="govuk-table__row"
              >
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  ID
                </th>
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  Summary
                </th>
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  Affected dates
                </th>
              </tr>
            </thead>
            <tbody
              className="govuk-table__body"
            >
              <tr
                className="govuk-table__row"
              >
                <th
                  className="govuk-table__header align-middle"
                  scope="row"
                >
                  <a
                    className="govuk-link"
                    href="/dashboard"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onTouchStart={[Function]}
                  >
                    33
                  </a>
                </th>
                <td
                  className="govuk-table__cell align-middle"
                >
                  A more ok disruption
                </td>
                <td
                  className="govuk-table__cell align-middle"
                >
                  <div
                    className="pb-2 last:pb-0"
                  >
                    21/03/2023
                     
                    - 22/03/2023
                  </div>
                </td>
              </tr>
              <tr
                className="govuk-table__row"
              >
                <th
                  className="govuk-table__header align-middle"
                  scope="row"
                >
                  <a
                    className="govuk-link"
                    href="/dashboard"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onTouchStart={[Function]}
                  >
                    44
                  </a>
                </th>
                <td
                  className="govuk-table__cell align-middle"
                >
                  Another disruption
                </td>
                <td
                  className="govuk-table__cell align-middle"
                >
                  <div
                    className="pb-2 last:pb-0"
                  >
                    21/04/2023
                     
                    - 22/03/2024
                  </div>
                  <div
                    className="pb-2 last:pb-0"
                  >
                    22/04/2023
                     
                     onwards
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <a
        className="govuk-link"
        href="/dashboard"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <h2
          className="govuk-heading-s text-govBlue"
        >
          View all disruptions
        </h2>
      </a>
      <a
        className="govuk-link"
        href="/dashboard"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <h2
          className="govuk-heading-s text-govBlue"
        >
          View all social media
        </h2>
      </a>
      <a
        className="govuk-link"
        href="/dashboard"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <h2
          className="govuk-heading-s text-govBlue"
        >
          Draft disruptions
        </h2>
      </a>
      <div
        className="govuk-!-padding-top-5"
      >
        <h2
          className="govuk-heading-s"
        >
          Reviews
        </h2>
        <p
          className="govuk-body"
        >
          You have nothing to review
        </p>
        <a
          className="govuk-link"
          href="/dashboard"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          <h2
            className="govuk-heading-s text-govBlue"
          >
            View all
          </h2>
        </a>
      </div>
    </main>
    <div>
      <h2
        className="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        className="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link:
         
        <a
          className="govuk-link govuk-!-font-size-19"
          href="/contact"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          Contact us
        </a>
      </p>
    </div>
  </div>,
  <footer
    className="govuk-footer"
    role="contentinfo"
  >
    <div
      className="govuk-width-container"
    >
      <div
        className="govuk-footer__meta"
      >
        <div
          className="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            className="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            className="govuk-footer__inline-list"
          >
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Help
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/cookies"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Cookies
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Contact
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/accessibility"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Accessibility
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Terms and conditions
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/privacy"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            className="govuk-footer__body"
          >
            Built by the
             
            <a
              className="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            className="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            className="govuk-footer__licence-description"
          >
            All content is available under the
             
            <a
              className="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          className="govuk-footer__meta-item"
        >
          <a
            className="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>,
]
`;

exports[`pages > dashboard > should render correctly when there are no disruptions 1`] = `
[
  <div
    className="app-phase-banner__wrapper"
  >
    <div
      className="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        className="govuk-phase-banner__content"
      >
        <strong
          className="govuk-tag govuk-phase-banner__content__tag"
        >
          alpha
        </strong>
        <span
          className="govuk-phase-banner__text"
        >
          This is a new service – your
           
          <a
            className="govuk-link"
            href="/feedback"
            id="feedback-link"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            feedback
          </a>
           
          will help us to improve it.
        </span>
      </p>
    </div>
  </div>,
  <div
    className="govuk-width-container"
  >
    <main
      className="govuk-main-wrapper"
    >
      <h1
        className="govuk-heading-xl"
      >
        Dashboard
      </h1>
      <a
        className="govuk-button govuk-button--start"
        data-module="govuk-button"
        draggable="false"
        href="/create-disruption"
        id="create-new-button"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
        role="button"
      >
        Create new disruption
        <svg
          className="govuk-button__start-icon"
          focusable="false"
          height="19"
          role="presentation"
          viewBox="0 0 33 40"
          width="17.5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h13l20 20-20 20H0l20-20z"
            fill="currentColor"
          />
        </svg>
      </a>
      <div
        className="govuk-tabs"
        data-module="govuk-tabs"
      >
        <h2
          className="govuk-tabs__title"
        >
          Disruptions
        </h2>
        <ul
          className="govuk-tabs__list"
        >
          <li
            className="govuk-tabs__list-item govuk-tabs__list-item--selected"
          >
            <a
              className="govuk-tabs__tab"
              href="#live"
            >
              Live
            </a>
          </li>
          <li
            className="govuk-tabs__list-item"
          >
            <a
              className="govuk-tabs__tab"
              href="#upcoming"
            >
              Upcoming
            </a>
          </li>
        </ul>
        <div
          className="govuk-tabs__panel"
          id="live"
        >
          <table
            className="govuk-table"
          >
            <caption
              className="govuk-table__caption govuk-table__caption--l"
            >
              Live disruptions
            </caption>
            <thead
              className="govuk-table__head"
            >
              <tr
                className="govuk-table__row"
              >
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  ID
                </th>
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  Summary
                </th>
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  Affected dates
                </th>
              </tr>
            </thead>
            <tbody
              className="govuk-table__body"
            />
          </table>
        </div>
        <div
          className="govuk-tabs__panel govuk-tabs__panel--hidden"
          id="upcoming"
        >
          <table
            className="govuk-table"
          >
            <caption
              className="govuk-table__caption govuk-table__caption--l"
            >
              Upcoming disruptions
            </caption>
            <thead
              className="govuk-table__head"
            >
              <tr
                className="govuk-table__row"
              >
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  ID
                </th>
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  Summary
                </th>
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  Affected dates
                </th>
              </tr>
            </thead>
            <tbody
              className="govuk-table__body"
            />
          </table>
        </div>
      </div>
      <a
        className="govuk-link"
        href="/dashboard"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <h2
          className="govuk-heading-s text-govBlue"
        >
          View all disruptions
        </h2>
      </a>
      <a
        className="govuk-link"
        href="/dashboard"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <h2
          className="govuk-heading-s text-govBlue"
        >
          View all social media
        </h2>
      </a>
      <a
        className="govuk-link"
        href="/dashboard"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <h2
          className="govuk-heading-s text-govBlue"
        >
          Draft disruptions
        </h2>
      </a>
      <div
        className="govuk-!-padding-top-5"
      >
        <h2
          className="govuk-heading-s"
        >
          Reviews
        </h2>
        <p
          className="govuk-body"
        >
          You have nothing to review
        </p>
        <a
          className="govuk-link"
          href="/dashboard"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          <h2
            className="govuk-heading-s text-govBlue"
          >
            View all
          </h2>
        </a>
      </div>
    </main>
    <div>
      <h2
        className="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        className="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link:
         
        <a
          className="govuk-link govuk-!-font-size-19"
          href="/contact"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          Contact us
        </a>
      </p>
    </div>
  </div>,
  <footer
    className="govuk-footer"
    role="contentinfo"
  >
    <div
      className="govuk-width-container"
    >
      <div
        className="govuk-footer__meta"
      >
        <div
          className="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            className="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            className="govuk-footer__inline-list"
          >
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Help
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/cookies"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Cookies
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Contact
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/accessibility"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Accessibility
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Terms and conditions
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/privacy"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            className="govuk-footer__body"
          >
            Built by the
             
            <a
              className="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            className="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            className="govuk-footer__licence-description"
          >
            All content is available under the
             
            <a
              className="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          className="govuk-footer__meta-item"
        >
          <a
            className="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>,
]
`;

exports[`pages > dashboard > should render correctly when there are only live disruptions 1`] = `
[
  <div
    className="app-phase-banner__wrapper"
  >
    <div
      className="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        className="govuk-phase-banner__content"
      >
        <strong
          className="govuk-tag govuk-phase-banner__content__tag"
        >
          alpha
        </strong>
        <span
          className="govuk-phase-banner__text"
        >
          This is a new service – your
           
          <a
            className="govuk-link"
            href="/feedback"
            id="feedback-link"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            feedback
          </a>
           
          will help us to improve it.
        </span>
      </p>
    </div>
  </div>,
  <div
    className="govuk-width-container"
  >
    <main
      className="govuk-main-wrapper"
    >
      <h1
        className="govuk-heading-xl"
      >
        Dashboard
      </h1>
      <a
        className="govuk-button govuk-button--start"
        data-module="govuk-button"
        draggable="false"
        href="/create-disruption"
        id="create-new-button"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
        role="button"
      >
        Create new disruption
        <svg
          className="govuk-button__start-icon"
          focusable="false"
          height="19"
          role="presentation"
          viewBox="0 0 33 40"
          width="17.5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h13l20 20-20 20H0l20-20z"
            fill="currentColor"
          />
        </svg>
      </a>
      <div
        className="govuk-tabs"
        data-module="govuk-tabs"
      >
        <h2
          className="govuk-tabs__title"
        >
          Disruptions
        </h2>
        <ul
          className="govuk-tabs__list"
        >
          <li
            className="govuk-tabs__list-item govuk-tabs__list-item--selected"
          >
            <a
              className="govuk-tabs__tab"
              href="#live"
            >
              Live
            </a>
          </li>
          <li
            className="govuk-tabs__list-item"
          >
            <a
              className="govuk-tabs__tab"
              href="#upcoming"
            >
              Upcoming
            </a>
          </li>
        </ul>
        <div
          className="govuk-tabs__panel"
          id="live"
        >
          <table
            className="govuk-table"
          >
            <caption
              className="govuk-table__caption govuk-table__caption--l"
            >
              Live disruptions
            </caption>
            <thead
              className="govuk-table__head"
            >
              <tr
                className="govuk-table__row"
              >
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  ID
                </th>
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  Summary
                </th>
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  Affected dates
                </th>
              </tr>
            </thead>
            <tbody
              className="govuk-table__body"
            >
              <tr
                className="govuk-table__row"
              >
                <th
                  className="govuk-table__header align-middle"
                  scope="row"
                >
                  <a
                    className="govuk-link"
                    href="/dashboard"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onTouchStart={[Function]}
                  >
                    12
                  </a>
                </th>
                <td
                  className="govuk-table__cell align-middle"
                >
                  A bad disruption
                </td>
                <td
                  className="govuk-table__cell align-middle"
                >
                  <div
                    className="pb-2 last:pb-0"
                  >
                    21/03/2023
                     
                     onwards
                  </div>
                </td>
              </tr>
              <tr
                className="govuk-table__row"
              >
                <th
                  className="govuk-table__header align-middle"
                  scope="row"
                >
                  <a
                    className="govuk-link"
                    href="/dashboard"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onTouchStart={[Function]}
                  >
                    33
                  </a>
                </th>
                <td
                  className="govuk-table__cell align-middle"
                >
                  A more ok disruption
                </td>
                <td
                  className="govuk-table__cell align-middle"
                >
                  <div
                    className="pb-2 last:pb-0"
                  >
                    21/03/2023
                     
                    - 22/03/2023
                  </div>
                </td>
              </tr>
              <tr
                className="govuk-table__row"
              >
                <th
                  className="govuk-table__header align-middle"
                  scope="row"
                >
                  <a
                    className="govuk-link"
                    href="/dashboard"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onTouchStart={[Function]}
                  >
                    44
                  </a>
                </th>
                <td
                  className="govuk-table__cell align-middle"
                >
                  Another disruption
                </td>
                <td
                  className="govuk-table__cell align-middle"
                >
                  <div
                    className="pb-2 last:pb-0"
                  >
                    21/04/2023
                     
                    - 22/03/2024
                  </div>
                  <div
                    className="pb-2 last:pb-0"
                  >
                    22/04/2023
                     
                     onwards
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          className="govuk-tabs__panel govuk-tabs__panel--hidden"
          id="upcoming"
        >
          <table
            className="govuk-table"
          >
            <caption
              className="govuk-table__caption govuk-table__caption--l"
            >
              Upcoming disruptions
            </caption>
            <thead
              className="govuk-table__head"
            >
              <tr
                className="govuk-table__row"
              >
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  ID
                </th>
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  Summary
                </th>
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  Affected dates
                </th>
              </tr>
            </thead>
            <tbody
              className="govuk-table__body"
            />
          </table>
        </div>
      </div>
      <a
        className="govuk-link"
        href="/dashboard"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <h2
          className="govuk-heading-s text-govBlue"
        >
          View all disruptions
        </h2>
      </a>
      <a
        className="govuk-link"
        href="/dashboard"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <h2
          className="govuk-heading-s text-govBlue"
        >
          View all social media
        </h2>
      </a>
      <a
        className="govuk-link"
        href="/dashboard"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <h2
          className="govuk-heading-s text-govBlue"
        >
          Draft disruptions
        </h2>
      </a>
      <div
        className="govuk-!-padding-top-5"
      >
        <h2
          className="govuk-heading-s"
        >
          Reviews
        </h2>
        <p
          className="govuk-body"
        >
          You have nothing to review
        </p>
        <a
          className="govuk-link"
          href="/dashboard"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          <h2
            className="govuk-heading-s text-govBlue"
          >
            View all
          </h2>
        </a>
      </div>
    </main>
    <div>
      <h2
        className="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        className="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link:
         
        <a
          className="govuk-link govuk-!-font-size-19"
          href="/contact"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          Contact us
        </a>
      </p>
    </div>
  </div>,
  <footer
    className="govuk-footer"
    role="contentinfo"
  >
    <div
      className="govuk-width-container"
    >
      <div
        className="govuk-footer__meta"
      >
        <div
          className="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            className="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            className="govuk-footer__inline-list"
          >
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Help
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/cookies"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Cookies
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Contact
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/accessibility"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Accessibility
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Terms and conditions
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/privacy"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            className="govuk-footer__body"
          >
            Built by the
             
            <a
              className="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            className="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            className="govuk-footer__licence-description"
          >
            All content is available under the
             
            <a
              className="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          className="govuk-footer__meta-item"
        >
          <a
            className="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>,
]
`;

exports[`pages > dashboard > should render correctly when there are only upcoming disruptions 1`] = `
[
  <div
    className="app-phase-banner__wrapper"
  >
    <div
      className="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        className="govuk-phase-banner__content"
      >
        <strong
          className="govuk-tag govuk-phase-banner__content__tag"
        >
          alpha
        </strong>
        <span
          className="govuk-phase-banner__text"
        >
          This is a new service – your
           
          <a
            className="govuk-link"
            href="/feedback"
            id="feedback-link"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            feedback
          </a>
           
          will help us to improve it.
        </span>
      </p>
    </div>
  </div>,
  <div
    className="govuk-width-container"
  >
    <main
      className="govuk-main-wrapper"
    >
      <h1
        className="govuk-heading-xl"
      >
        Dashboard
      </h1>
      <a
        className="govuk-button govuk-button--start"
        data-module="govuk-button"
        draggable="false"
        href="/create-disruption"
        id="create-new-button"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
        role="button"
      >
        Create new disruption
        <svg
          className="govuk-button__start-icon"
          focusable="false"
          height="19"
          role="presentation"
          viewBox="0 0 33 40"
          width="17.5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h13l20 20-20 20H0l20-20z"
            fill="currentColor"
          />
        </svg>
      </a>
      <div
        className="govuk-tabs"
        data-module="govuk-tabs"
      >
        <h2
          className="govuk-tabs__title"
        >
          Disruptions
        </h2>
        <ul
          className="govuk-tabs__list"
        >
          <li
            className="govuk-tabs__list-item govuk-tabs__list-item--selected"
          >
            <a
              className="govuk-tabs__tab"
              href="#live"
            >
              Live
            </a>
          </li>
          <li
            className="govuk-tabs__list-item"
          >
            <a
              className="govuk-tabs__tab"
              href="#upcoming"
            >
              Upcoming
            </a>
          </li>
        </ul>
        <div
          className="govuk-tabs__panel"
          id="live"
        >
          <table
            className="govuk-table"
          >
            <caption
              className="govuk-table__caption govuk-table__caption--l"
            >
              Live disruptions
            </caption>
            <thead
              className="govuk-table__head"
            >
              <tr
                className="govuk-table__row"
              >
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  ID
                </th>
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  Summary
                </th>
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  Affected dates
                </th>
              </tr>
            </thead>
            <tbody
              className="govuk-table__body"
            />
          </table>
        </div>
        <div
          className="govuk-tabs__panel govuk-tabs__panel--hidden"
          id="upcoming"
        >
          <table
            className="govuk-table"
          >
            <caption
              className="govuk-table__caption govuk-table__caption--l"
            >
              Upcoming disruptions
            </caption>
            <thead
              className="govuk-table__head"
            >
              <tr
                className="govuk-table__row"
              >
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  ID
                </th>
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  Summary
                </th>
                <th
                  className="govuk-table__header align-middle"
                  scope="col"
                >
                  Affected dates
                </th>
              </tr>
            </thead>
            <tbody
              className="govuk-table__body"
            >
              <tr
                className="govuk-table__row"
              >
                <th
                  className="govuk-table__header align-middle"
                  scope="row"
                >
                  <a
                    className="govuk-link"
                    href="/dashboard"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onTouchStart={[Function]}
                  >
                    12
                  </a>
                </th>
                <td
                  className="govuk-table__cell align-middle"
                >
                  A bad disruption
                </td>
                <td
                  className="govuk-table__cell align-middle"
                >
                  <div
                    className="pb-2 last:pb-0"
                  >
                    21/03/2023
                     
                     onwards
                  </div>
                </td>
              </tr>
              <tr
                className="govuk-table__row"
              >
                <th
                  className="govuk-table__header align-middle"
                  scope="row"
                >
                  <a
                    className="govuk-link"
                    href="/dashboard"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onTouchStart={[Function]}
                  >
                    33
                  </a>
                </th>
                <td
                  className="govuk-table__cell align-middle"
                >
                  A more ok disruption
                </td>
                <td
                  className="govuk-table__cell align-middle"
                >
                  <div
                    className="pb-2 last:pb-0"
                  >
                    21/03/2023
                     
                    - 22/03/2023
                  </div>
                </td>
              </tr>
              <tr
                className="govuk-table__row"
              >
                <th
                  className="govuk-table__header align-middle"
                  scope="row"
                >
                  <a
                    className="govuk-link"
                    href="/dashboard"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onTouchStart={[Function]}
                  >
                    44
                  </a>
                </th>
                <td
                  className="govuk-table__cell align-middle"
                >
                  Another disruption
                </td>
                <td
                  className="govuk-table__cell align-middle"
                >
                  <div
                    className="pb-2 last:pb-0"
                  >
                    21/04/2023
                     
                    - 22/03/2024
                  </div>
                  <div
                    className="pb-2 last:pb-0"
                  >
                    22/04/2023
                     
                     onwards
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <a
        className="govuk-link"
        href="/dashboard"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <h2
          className="govuk-heading-s text-govBlue"
        >
          View all disruptions
        </h2>
      </a>
      <a
        className="govuk-link"
        href="/dashboard"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <h2
          className="govuk-heading-s text-govBlue"
        >
          View all social media
        </h2>
      </a>
      <a
        className="govuk-link"
        href="/dashboard"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <h2
          className="govuk-heading-s text-govBlue"
        >
          Draft disruptions
        </h2>
      </a>
      <div
        className="govuk-!-padding-top-5"
      >
        <h2
          className="govuk-heading-s"
        >
          Reviews
        </h2>
        <p
          className="govuk-body"
        >
          You have nothing to review
        </p>
        <a
          className="govuk-link"
          href="/dashboard"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          <h2
            className="govuk-heading-s text-govBlue"
          >
            View all
          </h2>
        </a>
      </div>
    </main>
    <div>
      <h2
        className="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        className="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link:
         
        <a
          className="govuk-link govuk-!-font-size-19"
          href="/contact"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          Contact us
        </a>
      </p>
    </div>
  </div>,
  <footer
    className="govuk-footer"
    role="contentinfo"
  >
    <div
      className="govuk-width-container"
    >
      <div
        className="govuk-footer__meta"
      >
        <div
          className="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            className="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            className="govuk-footer__inline-list"
          >
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Help
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/cookies"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Cookies
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Contact
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/accessibility"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Accessibility
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Terms and conditions
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/privacy"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            className="govuk-footer__body"
          >
            Built by the
             
            <a
              className="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            className="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            className="govuk-footer__licence-description"
          >
            All content is available under the
             
            <a
              className="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          className="govuk-footer__meta-item"
        >
          <a
            className="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>,
]
`;
